# restaurant-clean

./: .env.example  .env.txt  .gitignore  AUDYT_TECHNICZNY.md  PLAN_MIGRACJI.md  README.md  deploy.py  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  supabase-schema.sql  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  deploy.yml
.qwen/: settings.json  settings.json.orig
backend/: Dockerfile  Dockerfile.dev  pyproject.toml
backend-dotnet/: Dockerfile  Restaurant.slnx
backend/app/: celery_app.py  config.py  database.py  main.py  seed.py
backend/app/api/: __init__.py  auth.py  chat.py  menu.py  order.py  payment.py  reservation.py  upload.py  warehouse.py
backend/app/models/: __init__.py  ingredient.py  konwersacje.py  menu_item.py  order.py  rezerwacje.py  user.py
backend/app/schemas/: auth.py  chat.py  menu.py  order.py  reservation.py  warehouse.py
backend/app/services/: auth.py  chat.py  menu.py  order.py  payment.py  reservation.py  warehouse.py
backend/app/tasks/: cancel_orders.py  email.py
backend/postgres/: init.sql
backend/tests/: conftest.py  test_auth_api.py  test_auth_service.py
src/: App.jsx  App.tsx  index.css
src/components/: CartWidget.jsx  CartWidget.tsx  ErrorBoundary.jsx  ErrorBoundary.tsx  MenuCard.jsx  MenuCard.tsx  Navbar.jsx  Navbar.tsx  StripePayment.jsx  StripePayment.tsx
src/constants/: orderStatus.ts
src/context/: AuthContext.jsx  AuthContext.tsx  ToastContext.jsx  ToastContext.tsx
src/hooks/: useCart.jsx  useCart.tsx  useKitchenNotifications.js  useOrders.test.ts  (+2 more)
(+132 files in other folders)
